# asta-autodiscovery

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  INFRA.md  Makefile  NOTICE  README.md  cloudbuild.yaml  docker-compose.yaml  index.html  justfile  main.py  mkdocs.yml  objects.inv  package.json  pyproject.toml  ruff.toml  server.js  sitemap.xml
.github/workflows/: autodiscovery-build.yml  ci.yml  deploy-docs.yml  docker-build.yml  e2e-tests.yml  maintenance-build.yml  process-public-main-change.yml  publish-to-pypi.yml  replay-build.yml  scripts-build.yml  slack-notify.yml  ui-build.yml
api/: Dockerfile  app.py  dev.sh  pyproject.toml  requirements.txt  start.sh
api/admin/: __init__.py  admin_ui.py  jobs_api.py
api/auth/: auth_api.py
api/autodiscovery_modal/: index.html
api/code_execution/: index.html
api/demo/: api.py  auth.py
api/metrics/: aggregator.py  costs.py  metrics_api.py  models.py
api/root/: root_api.py
api/runs/: __init__.py  models.py  runs_api.py
api/scripts/: auth_admin.py  backfill_credit_overrides.py  export_users_csv.py
api/static/: admin.html
api/user/: user_api.py
api/utils/: asta_client.py  asta_context_client.py  auth.py  credits.py  dev.py  error.py  experiments.py  glog.py  userid_logging.py
api/utils/auth/: __init__.py  base.py  decorators.py  factory.py  models.py  password_store.py  permissions.py
api/utils/auth/providers/: _bearer.py  auth0.py  none.py  password_file.py
app/: Dockerfile  dev.Dockerfile
app/src/app/: layout.tsx  page.module.css  page.tsx  shared.module.css
app/src/app/components/: footer.tsx  header.module.css  header.tsx
autodiscovery/standalone/: index.html
autodiscovery/surprisal_normalization/: index.html
autodiscovery_modal/sandbox_backend/: index.html
autods-viz/: Dockerfile  package-lock.json  server.js
autods-viz/public/: index.html
code_execution/ipython_executor/: index.html
code_execution/ipython_session/: index.html
devtools/: README.md  __init__.py
devtools/adk/: __init__.py  agent.py
docs/: index.md
docs/api/: autodiscovery_modal.md  code_execution.md
docs/assets/styles/: asta.css
docs/autodiscovery/: standalone.md  surprisal_normalization.md
docs/autodiscovery_modal/: ipython_executor.md  ipython_session.md  sandbox_backend.md
docs/code_execution/: ipython_executor.md  ipython_session.md
docs/design/: auth-providers.md
javascripts/: mathjax.js
outputs/20260209-101552/: args.json
proxy/: local.conf  prod.conf
public/: index.html
scripts/: Dockerfile  README.md  cleanup_old_datasets.py  manage-version.py  modal_gcs_sandbox_smoketest.py  pin-dependencies.py  send_completion_emails.py  test_gcs.sh
search/: search_index.json
sonar/: Dockerfile  ping.py
ui/: .eslintrc.js  .gitignore  .prettierrc  Dockerfile  dev.Dockerfile  package-lock.json  package.json  playwright.config.ts
ui/e2e/: README.md  authenticated-flow.spec.ts  details-pages.spec.ts  global-setup.ts  helpers.ts  homepage.spec.ts  public-sample.spec.ts  runs-pages.spec.ts
ui/src/: plotly.js-dist-min.d.ts  stdlib-stats-beta-pdf.d.ts
ui/src/app/: layout.tsx  page.module.css  page.tsx  testIds.ts
ui/src/app/analytics/: heapAnalytics.ts  run.ts  runDetails.ts  runSetup.ts  track.ts
ui/src/app/api/: Api.ts  ApiResponse.ts  BaseApi.ts  MetricsApi.ts  RunsApi.ts  UserApi.ts  gcsUpload.ts
ui/src/app/auth/: Auth0Client.ts  AuthClient.ts  authBridge.ts  authConfig.ts
ui/src/app/components/: AboutButton.tsx  AstaAdBanner.tsx  AttributionDialog.tsx  AuthButton.tsx  AuthErrorDialog.tsx  ClientProviders.tsx  CodeBlock.tsx  CreditsChip.tsx  DisclaimerDialog.tsx  EnrollmentStatus.tsx  FeedbackButton.tsx  Header.tsx  HeapAnalytics.tsx  HeapAnalyticsLoader.tsx  LoadingSpinner.tsx  LoginDialog.tsx  SimpleLogo.tsx  ToS.tsx  Toast.tsx  Toasts.tsx  UserProfile.tsx  VarnishHeader.tsx  footer.module.css  header.tsx  main.module.css  main.tsx
ui/src/app/contexts/: Auth0Context.tsx  ExampleRunsContext.tsx  ExperimentBookmarksContext.tsx  RunBookmarksContext.tsx  RunExperimentsContext.tsx  RunsContext.tsx  ToastsContext.tsx  URLSearchParamsContext.tsx  ViewerCreditsContext.tsx  ViewerRunsContext.tsx
ui/src/app/debug/: layout.tsx
ui/src/app/debug/auth/: layout.tsx  page.tsx
ui/src/app/debug/user/: page.tsx
ui/src/app/icons/: Logo.tsx
ui/src/app/metrics/: layout.tsx  page.tsx
ui/src/app/metrics/components/: AggregatedUsageDialog.tsx  CostBreakdownChart.tsx  DailyEnvelopeCharts.tsx  LLMUsageDashboard.tsx  MetricCard.tsx  StatusDistributionChart.tsx  TimePeriodFilter.tsx  UsersTable.tsx
ui/src/app/metrics/users/: page.tsx
ui/src/app/runs/: actions.ts  layout.tsx  page.tsx
ui/src/app/runs/[runId]/: page.tsx
ui/src/app/runs/components/: BeliefDistributionPlot.tsx  ContinueWithAstaModal.tsx  CreateRunButton.tsx  DatasetUpload.tsx  ExamplesBox.tsx  ExamplesRunsBox.tsx  ExperimentBookmarkControl.tsx  ExperimentDetails.tsx  (+19 more)
ui/src/app/shared/: DialogBase.tsx  layout.tsx
ui/src/app/types/: Metrics.ts  Run.ts  User.ts
ui/src/app/user/: actions.ts
ui/src/app/utils/: csvExport.ts  exportUtils.ts  mimeType.ts  scrollbar.ts  styledProps.ts  timeUtils.ts
(+10 files in other folders)
