[project]
name = "asta-autodiscovery"
version = "0.0.1"
description = "Asta AutoDiscovery"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pytest-cov",
    "matplotlib",
    "ruff",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
pythonpath = [
    "packages/code_execution/src",
    "packages/agents/src",
    "packages/autodiscovery_modal/src",
]
markers = [
    "modal: integration tests that run against Modal",
]

[tool.uv.workspace]
members = [
    "packages/code_execution",
    "packages/agents",
    "packages/autodiscovery_modal",
    "packages/devtools"
]

[tool.uv.sources]
agents = { workspace = true }
autodiscovery_modal = { workspace = true }
code-execution = { workspace = true }

[tool.coverage.run]
omit = [
    "packages/**/tests/**",
]
