[project]
name = "asta-autodiscovery"
version = "0.0.1"
description = "Asta AutoDiscovery"
readme = "README.md"
authors = [
    { name = "Allen Institute for Artificial Intelligence" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "matplotlib",
    "ruff",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
pythonpath = [
    "packages/code_execution/src",
    "packages/agents/src",
    "packages/autodiscovery/src",
    "packages/autodiscovery_modal/src",
    "packages/autodiscovery_jobs/src",
]
markers = [
    "modal: integration tests that run against Modal",
    "adc: tests that require Application Default Credentials",
]

[tool.uv.workspace]
members = [
    "packages/code_execution",
    "packages/agents",
    "packages/autodiscovery",
    "packages/autodiscovery_modal",
    "packages/autodiscovery_jobs",
    "packages/devtools"
]

[tool.uv.sources]
agents = { workspace = true }
autodiscovery = { workspace = true }
autodiscovery-modal = { workspace = true }
autodiscovery-jobs = { workspace = true }
code-execution = { workspace = true }
# Local dev: uncomment below and comment out the git source
# asta-sandbox = { path = "../dv-core-asta-integration/packages/sandbox", editable = true }
asta-sandbox = { git = "https://github.com/allenai/dv-core-asta-integration", subdirectory = "packages/sandbox", rev = "main" }

[tool.coverage.run]
omit = [
    "packages/**/tests/**",
]
