[project]
name = "asta-autodiscovery-workspace"
version = "0.1.4"
description = "Asta AutoDiscovery (workspace root)"
readme = "README.md"
authors = [
    { name = "Allen Institute for Artificial Intelligence" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "matplotlib",
    "ruff",
]

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-autorefs",
  "mkdocs-material",
  "mkdocstrings[python]",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
pythonpath = [
    "packages/code_execution/src",
    "packages/agents/src",
    "packages/autodiscovery/src",
    "packages/autodiscovery_modal/src",
    "packages/autodiscovery_jobs/src",
]
markers = [
    "modal: integration tests that run against Modal",
    "adc: tests that require Application Default Credentials",
]

[tool.uv.workspace]
members = [
    "packages/code_execution",
    "packages/agents",
    "packages/autodiscovery",
    "packages/autodiscovery_modal",
    "packages/autodiscovery_jobs",
    "packages/devtools"
]

[tool.uv.sources]
asta-agents = { workspace = true }
asta-autodiscovery = { workspace = true }
asta-autodiscovery-modal = { workspace = true }
asta-autodiscovery-jobs = { workspace = true }
asta-code-execution = { workspace = true }
# Local dev: path override for asta-sandbox (comment out to use PyPI)
#asta-sandbox = { path = "../dv-core-asta-integration/packages/sandbox", editable = true }

[tool.coverage.run]
omit = [
    "packages/**/tests/**",
]
