[project]
name = "api"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "gunicorn",
    "python-json-logger>=2,<4",
    "pyjwt",
    "cryptography",
    "requests",
    "pydantic",
    "autodiscovery-jobs",
]

[tool.uv]
package = false

[tool.uv.sources]
autodiscovery-jobs = { workspace = true }

[tool.pyright]
pythonVersion = "3.13"
